--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -1,7 +1,8 @@
 $blue: #1a83e4;
+$hovBlue: #c0e1ff;
 $red: #e32625;
 $yellow: #00748c;
-$lightBlue: #EAF5FF;
+$lightBlue: #eaf5ff;
 
 $white: #ffffff;
 
@@ -9,12 +10,12 @@ $red: #e32625;
 $softRed: #faae9e;
 $lightRed: #cc5841;
 
-$gray:#aaaaaa;
-$lightGray: #F8F8F8;
+$gray: #aaaaaa;
+$lightGray: #f8f8f8;
 $softGray: #a7a5a5;
 $darkGray: #4f4f4f;
 
 $black: #000000;
-$softBlack : #333333;
+$softBlack: #333333;
 
-$lightGreen: #27AE60;
+$lightGreen: #27ae60;
