--- a/src/components/organisms/chat/chatList/_index.scss
+++ b/src/components/organisms/chat/chatList/_index.scss
@@ -29,6 +29,6 @@
 }
 
 .available_bullet .cs-status__bullet {
-  background: #08de77 !important;
-  border: 3px solid #ffffff !important;
+  background: $brightGreen !important;
+  border: 3px solid $white !important;
 }
