--- a/src/assets/typography/_index.scss
+++ b/src/assets/typography/_index.scss
@@ -52,6 +52,10 @@ $secondary-font: 'Inter', sans-serif;
   color: $text-secondary-color !important;
 }
 
+.text-blue-color{
+  color: $blue
+}
+
 .tertiary-text-color {
   color: $text-tertiary-color !important;
 }
