--- a/src/components/molecules/cards/_index.scss
+++ b/src/components/molecules/cards/_index.scss
@@ -207,3 +207,24 @@ small {
     line-height: 20px;
     color: $text-quaternary-color;
 }
+.profile-image-add-icon{
+    position: absolute;
+    margin-left: 3rem;
+    margin-top: -3rem;
+    color: $lightGreen;
+
+}
+
+.profile-image-add-icon-container{
+    display: flex;
+    position: absolute;
+    margin-left: 5.5rem;
+    margin-top: -5.5rem;    
+    justify-content: center;
+    align-items: center;   
+    background-color: $lightGreen;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    
+}
