--- a/src/components/organisms/viewConsProfile/_index.scss
+++ b/src/components/organisms/viewConsProfile/_index.scss
@@ -95,15 +95,18 @@
   object-fit: cover;
 }
 
-.profile-main-image-icon{
+.profile-main-image-container{
   display: flex;
   justify-content:center;
   align-items: center;
-  width: 6rem;
-  height: 6rem;
-  border-radius: 3rem;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 4rem;
   background-color: $buttonGray;
+}
 
+.profile-main-image-container:hover{
+  opacity: 0.7;
 }
 
 .review {
