--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -510,7 +510,6 @@ label {
   margin-right: 4rem; }
 
 .auth-text-container {
-  height: 3rem;
   border: none; }
 
 .auth-text-input-container {
@@ -519,7 +518,7 @@ label {
   border-width: 1px;
   border-radius: 0;
   border-style: solid;
-  border-color: #a7a5a5;
+  border-color: #D6D6D6;
   align-items: center; }
 
 .auth-button {
@@ -576,6 +575,23 @@ label {
   animation-name: svg-person;
   animation-duration: 0.5s;
   animation-timing-function: ease; }
+
+.otp-inputs-container input {
+  width: 40px;
+  height: 50px;
+  border-radius: 3px;
+  background-color: #D6D6D6;
+  border-style: solid;
+  border-width: 1px;
+  text-align: center;
+  color: #000000;
+  margin: 0 3px;
+  font-weight: 400; }
+
+.otp-error {
+  border-style: solid;
+  border-color: #cc5841;
+  border-width: 1px; }
 
 .table-striped tbody tr:nth-of-type(odd) {
   background-color: transparent; }
