--- a/src/components/organisms/authForms/_index.scss
+++ b/src/components/organisms/authForms/_index.scss
@@ -60,7 +60,6 @@ z-index: -1;
 }
 
 .auth-text-container{
-  height: 3rem;
   border: none;
 }
 .auth-text-input-container{
@@ -69,7 +68,7 @@ z-index: -1;
   border-width: 1px;
   border-radius: 0;
   border-style: solid;
-  border-color: $softGray;
+  border-color: $mediumGray;
   align-items: center;
 }
 .auth-button{
@@ -126,4 +125,26 @@ z-index: -1;
   animation-timing-function: ease;
 }
 
+.otp-inputs-container{
+  input {
+		width: 40px;
+		height: 50px;
+    border-radius: 3px;
+    background-color: $mediumGray;
+    border-style:solid;
+    border-width: 1px;
+		text-align: center;
+		color: $text-primary-color;
+		margin: 0 3px;
+    font-weight: 400;
+	}
 
+
+}
+
+.otp-error {
+  border-style:solid;
+    border-color: $lightRed;
+    border-width: 1px;
+
+}
