--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -74,7 +74,7 @@
   color: #4f4f4f !important; }
 
 .bg-highlight-color {
-  background-color: #FAFAFA !important; }
+  background-color: #fafafa !important; }
 
 .pointer {
   cursor: pointer !important; }
@@ -119,16 +119,16 @@ button {
   flex-wrap: nowrap; }
 
 .light-gray-color-bg {
-  background-color: #FAFAFA; }
+  background-color: #fafafa; }
 
 .border-gray-color {
-  border-color: #D6D6D6; }
+  border-color: #d6d6d6; }
 
 .text-input-color {
   background-color: #f0f0f0; }
 
 .text-input-button-bg {
-  background-color: #E0E0E0; }
+  background-color: #e0e0e0; }
 
 .tag-bg-color {
   background-color: #f0f0f0; }
@@ -228,7 +228,7 @@ button {
   pointer-events: none; }
 
 .background-disabled-color {
-  background: #FAFAFA !important; }
+  background: #fafafa !important; }
 
 .button-elevated {
   color: #000000 !important;
@@ -361,7 +361,7 @@ input[type='number'] {
   min-width: 200px;
   align-items: center;
   justify-content: center;
-  background-color: #FAFAFA !important;
+  background-color: #fafafa !important;
   color: #4f4f4f;
   border-radius: 5px;
   font-weight: 500;
@@ -401,7 +401,7 @@ input[type='number'] {
   width: 8rem;
   height: 8rem;
   border-radius: 4rem;
-  background-color: #E0E0E0; }
+  background-color: #e0e0e0; }
 
 .profile-main-image-container:hover {
   opacity: 0.7; }
@@ -494,7 +494,7 @@ label {
   height: 100vh; }
 
 .auth-svg-container {
-  background-color: #EAF5FF;
+  background-color: #eaf5ff;
   min-height: 100vh;
   overflow: hidden; }
 
@@ -518,7 +518,7 @@ label {
   border-width: 1px;
   border-radius: 0;
   border-style: solid;
-  border-color: #D6D6D6;
+  border-color: #d6d6d6;
   align-items: center; }
 
 .auth-button {
@@ -580,7 +580,7 @@ label {
   width: 40px;
   height: 50px;
   border-radius: 3px;
-  background-color: #D6D6D6;
+  background-color: #d6d6d6;
   border-style: solid;
   border-width: 1px;
   text-align: center;
@@ -594,7 +594,7 @@ label {
   border-width: 1px; }
 
 .chat-border {
-  border-bottom: 1px solid #f8f8f8; }
+  border-bottom: 1px solid #fafafa; }
 
 .chat-list {
   height: auto;
@@ -603,7 +603,7 @@ label {
   padding-right: 0px; }
 
 .chat-card {
-  border-bottom: 1px solid #f8f8f8; }
+  border-bottom: 1px solid #fafafa; }
 
 .chat-list li :hover {
   background-color: #c0e1ff !important; }
@@ -646,7 +646,7 @@ label {
   border: 2px solid #1a83e4 !important; }
 
 .chat-container {
-  background-color: #f8f8f8 !important; }
+  background-color: #fafafa !important; }
 
 .chat-header * {
   background-color: #ffffff !important; }
@@ -725,7 +725,7 @@ label {
   justify-content: center; }
 
 .icon-wrapper:hover {
-  background-color: #E0E0E0; }
+  background-color: #e0e0e0; }
 
 .consult-register-form-header-container {
   flex-direction: row;
@@ -790,7 +790,7 @@ label {
   border-radius: 8px; }
 
 .consultant-register-education-icon-container {
-  background-color: #D6D6D6;
+  background-color: #d6d6d6;
   height: 5rem;
   width: 5rem;
   display: flex;
@@ -995,7 +995,7 @@ small {
   position: absolute;
   margin-left: 3rem;
   margin-top: -3rem;
-  color: #27AE60; }
+  color: #27ae60; }
 
 .profile-image-add-icon-container {
   display: flex;
@@ -1004,7 +1004,7 @@ small {
   margin-top: -5.5rem;
   justify-content: center;
   align-items: center;
-  background-color: #27AE60;
+  background-color: #27ae60;
   width: 2rem;
   height: 2rem;
   border-radius: 1rem; }
