add comments and formar code

--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -1,12 +1,12 @@
 $blue: #1a83e4;
-$secondryColor: #4756df;
+$darkBlue: #022C42;
 $hovBlue: #c0e1ff;
-$red: #e32625;
 $yellow: #00748c;
 $lightBlue: #eaf5ff;
 
 $white: #ffffff;
 
+$red: #e32625;
 $softRed: #faae9e;
 $lightRed: #cc5841;
 
