--- a/src/assets/brands/default/styles/_index.scss
+++ b/src/assets/brands/default/styles/_index.scss
@@ -1,20 +1,21 @@
 $bg-primary-color: $white;
 $bg-secondary-color: $gray;
+$bg-tertiary-color: $darkBlue;
 
 $text-primary-color: $black;
 $text-secondary-color: $gray;
 $text-tertiary-color: $blue;
 $text-quaternary-color: $darkGray;
 
-$btn-primary-bg-color: $blue;
+$btn-primary-bg-color: $darkBlue;
 $btn-secondary-bg-color: $white;
 $btn-tertiary-bg-color: $softGray;
 
 $btn-primary-text-color: $white;
-$btn-secondary-text-color: $blue;
+$btn-secondary-text-color: $darkBlue;
 
-$btn-primary-border-color: $blue;
-$btn-secondary-border-color: $blue;
+$btn-primary-border-color: $darkBlue;
+$btn-secondary-border-color: $darkBlue;
 
 $primary-border-color: $gray;
 $secondary-border-color: $lightGray;
@@ -34,3 +35,4 @@ $error-color: $lightRed;
 $success-color: $lightGreen;
 
 $primary-card-border-color: $lightBlue;
+$header-primary-color: $darkBlue;
