Fix ui color issues

--- a/src/assets/brands/default/styles/_index.scss
+++ b/src/assets/brands/default/styles/_index.scss
@@ -1,38 +1,2 @@
-$bg-primary-color: $white;
-$bg-secondary-color: $gray;
-$bg-tertiary-color: $darkBlue;
-
-$text-primary-color: $black;
-$text-secondary-color: $gray;
-$text-tertiary-color: $blue;
-$text-quaternary-color: $darkGray;
-
-$btn-primary-bg-color: $darkBlue;
-$btn-secondary-bg-color: $white;
-$btn-tertiary-bg-color: $softGray;
-
-$btn-primary-text-color: $white;
-$btn-secondary-text-color: $darkBlue;
-
-$btn-primary-border-color: $darkBlue;
-$btn-secondary-border-color: $darkBlue;
-
-$primary-border-color: $gray;
-$secondary-border-color: $lightGray;
-
-$btn-link-text-color: $softGray;
-
-$bg-disabled-color: $lightGray;
-$text-disabled-color: $softGray;
-
-$title-primary-color: $softBlack;
-$title-secondary-color: $darkGray;
-
-$black-text-color: $black;
-$bg-highlight-color: $lightRed;
-
-$error-color: $lightRed;
-$success-color: $lightGreen;
-
-$primary-card-border-color: $lightBlue;
-$header-primary-color: $darkBlue;
+@import './theme';
+@import './styles';
