--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,5 +1,5 @@
-@import '../colors/_index';
+@import '../colors/index';
 @import '../brands/default/styles/index';
-@import 'theme';
+@import '../typography/index';
 @import '../../components/index';
 @import '../../pages/index';
