--- a/src/components/organisms/chat/chatList/_index.scss
+++ b/src/components/organisms/chat/chatList/_index.scss
@@ -10,7 +10,7 @@
 }
 
 .chat-list li :hover {
-  background-color: $hovBlue !important;
+  background-color:$bg-tertiary-color !important;
 }
 
 .avatar-pic > img {
@@ -20,7 +20,7 @@
 }
 
 .color-bar {
-  background-color: $blue !important;
+  background-color: $bg-tertiary-color !important;
   width: 3px;
   height: 100%;
   border-radius: 2px;
