--- a/src/components/shared/atoms/textInput/_style.scss
+++ b/src/components/shared/atoms/textInput/_style.scss
@@ -2,6 +2,7 @@
   height: 40px;
   outline: none;
   border: 2px solid $primary-border-color;
+  background-color:$bg-secondary-color;
 }
 
 .default-text-input:focus {
