--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -1,111 +1,3 @@
-@import '../typography/index';
-
-.primary-background-color {
-  background: $bg-primary-color !important;
-}
-
-.primary-border-color {
-  border-color: $bg-primary-color !important;
-}
-
-.purple-text-color {
-  color: $btn-secondary-text-color;
-}
-
-.bg-color-white {
-  background: $white;
-}
-
-.header-bg {
-  background: $header-primary-color !important;
-}
-
-.primary-title-color {
-  color: $title-primary-color !important;
-}
-
-.secondary-title-color {
-  color: $title-secondary-color !important;
-}
-
-.bg-highlight-color {
-  background-color: $lightGray !important;
-}
-
-.pointer {
-  cursor: pointer !important;
-}
-
-.not-allowed {
-  cursor: not-allowed !important;
-}
-
-.icon-disabled {
-  opacity: 0.3;
-}
-
-.truncate {
-  width: 250px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: $primary-font;
-  font-style: normal;
-}
-
-@media only screen and (max-width: 600px) {
-  body {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-family: $primary-font;
-    font-style: normal;
-    margin: 0;
-    padding: 0;
-  }
-
-  .page-container {
-    margin: 0;
-    padding: 0;
-  }
-}
-
-button {
-  background: none;
-  color: inherit;
-  border: none;
-  outline: inherit;
-}
-
-.text-inline {
-  flex-wrap: nowrap;
-}
-
-// TODO - Charitha - user proper name
-.light-gray-color-bg {
-  background-color: $lightGray;
-}
-
-.border-gray-color {
-  border-color: $mediumGray;
-}
-
-.text-input-color {
-  background-color:$secondryGray;
-}
-
-.text-input-button-bg {
-  background-color: $buttonGray;
-}
-
-.tag-bg-color {
-  background-color: $secondryGray;
-}
-
 .text-dark-color {
   color: $darkGray;
 }
@@ -121,9 +13,6 @@ button {
 .background-color {
   color: $white !important;
 }
-.text-danger {
-  color:$red;
-}
 
 .bg-danger {
   background-color: $red;
@@ -131,4 +20,19 @@ button {
 
 .text-light {
   color: $white;
+}
+
+
+
+.secondary-text-color {
+  color: $text-secondary-color !important;
+}
+
+.text-blue-color{
+  color: $text-primary-color; //need to replace
+}
+
+
+.text-disabled-color {
+  color: $text-disabled-color !important;
 }
