--- a/src/components/organisms/authForms/_index.scss
+++ b/src/components/organisms/authForms/_index.scss
@@ -68,7 +68,7 @@ z-index: -1;
   border-width: 1px;
   border-radius: 0;
   border-style: solid;
-  border-color: $mediumGray;
+  border-color: $primary-border-color;
   align-items: center;
 }
 .auth-button{
@@ -130,7 +130,7 @@ z-index: -1;
 		width: 40px;
 		height: 50px;
     border-radius: 3px;
-    background-color: $mediumGray;
+    background-color: $bg-secondary-color;
     border-style:solid;
     border-width: 1px;
 		text-align: center;
@@ -144,7 +144,7 @@ z-index: -1;
 
 .otp-error {
   border-style:solid;
-    border-color: $lightRed;
+    border-color: $error-color;
     border-width: 1px;
 
 }
