--- a/src/components/organisms/viewConsProfile/_index.scss
+++ b/src/components/organisms/viewConsProfile/_index.scss
@@ -57,7 +57,7 @@
   align-items: center;
   justify-content: center;
   background-color: $bg-disabled-color !important;
-  color: $text-quaternary-color;
+  color: $text-secondary-color;
   border-radius: 5px;
   font-weight: 500;
   line-height: 24px;
@@ -102,7 +102,6 @@
   width: 8rem;
   height: 8rem;
   border-radius: 4rem;
-  background-color: $buttonGray;
 }
 
 .profile-main-image-container:hover{
