--- a/src/components/shared/atoms/button/_style.scss
+++ b/src/components/shared/atoms/button/_style.scss
@@ -24,7 +24,7 @@
 .secondary-button {
   color: $btn-secondary-text-color !important;
   background: transparent !important;
-  border: 1px solid $btn-secondary-border-color;
+  border: 1px solid $btn-primary-border-color;
   border-radius: 5px;
   box-sizing: border-box;
   justify-content: center;
@@ -43,19 +43,19 @@
 }
 
 .button-link:hover {
-  color: $black-text-color;
+  color: $btn-link-text-color-hover;
   background-color: transparent;
   border: none;
 }
 
 .button-link:active {
-  color: $black-text-color !important;
+  color: $btn-link-text-color-hover !important;
   background-color: transparent !important;
   border: none !important;
   box-shadow: none !important;
 }
 .button-link:focus {
-  color: $black-text-color;
+  color: $btn-link-text-color-hover;
   background-color: transparent;
   border: none;
 }
@@ -78,5 +78,5 @@
 
 .button-elevated:hover {
   color: $btn-primary-text-color !important;
-  background: $black-text-color  !important;
+  background: $btn-link-text-color-hover !important;
 }
